Bugfix: invalid spec
Forgot to capitalize this

Caused:
ERROR: Preparation failed: failed to pull image
"registry.gitlab.com/graphviz/graphviz/:8437020a9de5bbd812cdc4cb09c94c349366631c"
with specified policies [always]: invalid reference format
(manager.go:205:0s)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -297,7 +297,7 @@ ubuntu20-10-cmake-build:
     tags:
         - linux
     variables:
-      image: ubuntu-20.10
+      IMAGE: ubuntu-20.10
 
 centos7-cmake-build:
     <<: *rpm_build_definition
