Fix docker push live step
Was getting error

```
/bin/bash: line 118: docker: command not found
```

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -625,6 +625,7 @@ deployment:
     - docker push     $CI_REGISTRY_IMAGE/$IMAGE:$CI_COMMIT_SHA
 
 .docker_push_template: &docker_push_definition
+  <<: *docker_definition
   stage: push_docker_images
   only:
     refs:
