--- a/ci/ubuntu-18.04/Dockerfile
+++ b/ci/ubuntu-18.04/Dockerfile
@@ -2,6 +2,8 @@ FROM ubuntu:18.04
 
 ARG DEBIAN_FRONTEND=noninteractive
 
+COPY requirements.txt ./requirements.txt
+
 RUN apt-get update -y \
 && apt-get install --no-install-recommends -y \
 # Development tools
@@ -77,7 +79,11 @@ ruby-dev \
 # Language extension gv_tcl
 tcl-dev \
 # Test utilities
-python3-pytest \
 ksh \
+python3-pip \
+python3-setuptools \
+# install Python dependencies
+&& python3 -m pip install --user --upgrade pip \
+&& python3 -m pip install --user --requirement requirements.txt \
 # Clean up
 && rm -rf /var/lib/apt/lists/*
