don't clone the history of submodules in Windows CI tasks
The Windows builds only need the tip of these repositories, so no need to spend
time and bandwidth retrieving their history.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -126,7 +126,7 @@ portable-source:
             $TARGET_ARCH = "x86";
           }
         # Retrieve submodules, dependencies are stored there.
-        - git submodule update --init
+        - git submodule update --init --depth 1
         # Install and set PATH
         - $Env:graphviz_install_dir = "C:\Graphviz"
         # Build
