--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -102,6 +102,15 @@ portable-source:
             metrics: metrics.txt
     except:
         - tags
+    # Most submitters don't have access to the macOS runners, and if they try
+    # to run macOS pipeline jobs, the jobs will hang forever.  This variable is
+    # only set on repos that have access to macOS runners, in GitLab repo
+    # settings.
+    # https://gitlab.com/graphviz/graphviz/-/settings/ci_cd
+    only:
+        variables:
+          - $ENABLE_GRAPHVIZ_MACOS_CI
+
 
 .build_template: &windows_build_definition
     stage: build
@@ -511,6 +520,14 @@ macos-autotools-test:
           artifacts: true
     tags:
         - macos
+    # Most submitters don't have access to the macOS runners, and if they try
+    # to run macOS pipeline jobs, the jobs will hang forever.  This variable is
+    # only set on repos that have access to macOS runners, in GitLab repo
+    # settings.
+    # https://gitlab.com/graphviz/graphviz/-/settings/ci_cd
+    only:
+        variables:
+          - $ENABLE_GRAPHVIZ_MACOS_CI
 
 ubuntu18-04-cmake-test:
     <<: *linux_test_definition
@@ -587,6 +604,14 @@ macos-cmake-test:
           artifacts: true
     tags:
         - macos
+    # Most submitters don't have access to the macOS runners, and if they try
+    # to run macOS pipeline jobs, the jobs will hang forever.  This variable is
+    # only set on repos that have access to macOS runners, in GitLab repo
+    # settings.
+    # https://gitlab.com/graphviz/graphviz/-/settings/ci_cd
+    only:
+        variables:
+          - $ENABLE_GRAPHVIZ_MACOS_CI
 
 deployment:
     stage: deploy
