--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -210,6 +210,7 @@ portable-source:
         - ci/install-packages.sh
         - export GV_VERSION=$( cat VERSION )
         - export OS_ID=$( cat OS_ID )
+        - find /usr/share/man
         - python3 -m pytest --verbose --junitxml=report.xml ci/tests.py tests rtest
     artifacts:
         reports:
