install man tools in Docker CI images
This will allow us to test man page installation in a future commit. Related to
#1936.

--- a/ci/fedora32/Dockerfile
+++ b/ci/fedora32/Dockerfile
@@ -53,6 +53,8 @@ guile-devel \
 java-devel \
 # Language extension gv_lua
 lua-devel \
+# for testing man page installations
+man-db \
 # Language extension gv_ocaml
 ocaml \
 # Language extension gv_perl
