Remove doc/info/*.gv
These files are not referenced by any HTML.

--- a/doc/info/Makefile.am
+++ b/doc/info/Makefile.am
@@ -3,7 +3,6 @@
 htmldir = $(pkgdatadir)/doc/html/info
 
 html_DATA = attrs.html colors.html command.html \
-  index.html lang.html output.html shapes.html arrows.html \
-  html2.gv html3.gv html4.gv
+  index.html lang.html output.html shapes.html arrows.html
 
 EXTRA_DIST = $(html_DATA)
