Adapt mkoutput.py to generate YAML for jekyll
This is towards #1962. The output yaml-front-matter HTML can be used as input to jekyll.

--- a/doc/infosrc/Makefile
+++ b/doc/infosrc/Makefile
@@ -11,15 +11,12 @@
 #  python is used to run:
 #  - jconvert.py, which converts the json schema graphviz_json_schema.json to html.
 #    This also relies on the python package json2html.
-#  - mkoutput.py, which converts templates/output.html.j2 to output.html
-#    This requires the jinja2 python package.
 #
 # The main products are web pages:
 #    arrows.html  - arrow_grammar
 #    colors.html  - color_names svgcolor_names brewer_colors
 #    command.html - raw HTML
 #    lang.html    - grammar
-#    output.html  - outputs
 #    shapes.html  - shapelist, html_grammar
 #
 # The files listed after each give the main data files used to
@@ -86,7 +83,7 @@ A2GIF= aa_box.gif aa_lbox.gif aa_rbox.gif aa_obox.gif aa_olbox.gif aa_orbox.gif\
 
 GIF = $(SGIF) $(AGIF) $(MGIF) $(A2GIF) $(XGIF)
 DOTS = html2.gv html3.gv html4.gv tee.gv
-HTML = colors.html command.html lang.html output.html shapes.html \
+HTML = colors.html command.html lang.html shapes.html \
        arrows.html schema.html
 MISC = graphviz_json_schema.json w3data.js
 INSTALL_FILES = $(HTML) $(DOTS) $(SGIF) $(AGIF) $(A2GIF) $(MGIF) $(XGIF) $(MPNG) $(MISC)
@@ -132,9 +129,6 @@ colors.html : colors.1 colors.n ../../lib/common/color_names ../../lib/common/sv
 	cat colors.n >> colors.html
 	rm -rf colortmp
 
-
-output.html : outputs mkoutput.py plugins.png schema.html templates/output.html.j2
-	./mkoutput.py < outputs > output.html
 
 schema.html : jconvert.py graphviz_json_schema.json
 	./jconvert.py graphviz_json_schema.json schema.html
@@ -202,17 +196,17 @@ clean :
 
 .PHONY: distclean
 distclean : clean
-	rm -f colors.html output.html shapes.html lang.html arrows.html schema.html
+	rm -f colors.html shapes.html lang.html arrows.html schema.html
 	rm -f $(A2GIF) $(AGIF) $(SGIF) $(MPJG) $(MGIF) $(MPNG) $(XGIF) shapes
 	(for s in $$(cat shapelist); do rm -f $$s.gif; done)
 
 EXTRA_DIST = $(XGIF) mklang.y mkarrows.sh mkshapes.sh mkstyles.sh mktapers.sh \
-             mkarrowtbl.sh mkoutput.py mkshhtml.py \
+             mkarrowtbl.sh mkshhtml.py \
 	           ps_to_png.sh arrow_grammar grammar html_grammar \
              shapelist colors.1 colors.n \
-             output.1 output.2 html.1 html.2 html1.dot html.3 \
+             html.1 html.2 html1.dot html.3 \
              shapes.1 shapes.2 shapes.3 lang.1 lang.2 arrows.1 arrows.2 \
              brewer.awk mkcolors.awk svg.awk sz.awk \
              colorlist.dot html1.dot html4.dot round.dot constraint.dot \
              html2.dot mrecord.dot sdlshapes.dot fill.dot html3.dot record.dot \
-             X11 outputs eqn.gif plugins.gv
+             X11 eqn.gif plugins.gv
